syntax = "proto3";

package proto;

option go_package = "nobitex/radar/internal/proto";

// TradeData represents a single trade from an exchange.
message TradeData {
  string id = 1;          // Unique trade ID (from exchange or generated)
  string exchange = 2;    // Exchange name (e.g., "nobitex", "wallex")
  string symbol = 3;      // Trading pair (e.g., "BTC/IRT", "ETH/USDT")
  double price = 4;       // Trade price in quote currency
  double volume = 5;      // Trade volume in base currency
  double quantity = 6;    // Total value (price * volume)
  string side = 7;        // Trade direction: "buy", "sell", or "all"
  string time = 8;        // Trade timestamp in RFC3339 format
  double usdt_price = 9;  // USDT/IRT price at trade time
}

// TradeDataBatch contains multiple trades (used by WebSocket scrapers).
message TradeDataBatch {
  repeated TradeData trades = 1;
}

// OHLCData represents a single candlestick (Open, High, Low, Close).
message OHLCData {
  string id = 1;          // Unique ID: exchange-symbol-interval-openTime
  string exchange = 2;    // Exchange name
  string symbol = 3;      // Trading pair
  string interval = 4;    // Timeframe: "1d", "4h", "1h", "15m", etc.
  double open = 5;        // Opening price
  double high = 6;        // Highest price
  double low = 7;         // Lowest price
  double close = 8;       // Closing price
  double volume = 9;      // Trading volume
  double usdt_price = 10; // USDT/IRT price at candle close
  string open_time = 11;  // Candle open time in RFC3339 format
}

// OHLCDataBatch contains multiple OHLC candles.
message OHLCDataBatch {
  repeated OHLCData candles = 1;
}

// OrderLevel represents a single price level in the order book.
// We keep this lightweight as it will be repeated hundreds of times.
message OrderLevel {
  double price = 1;
  double volume = 2;
}

// OrderBookSnapshot represents the full state of the market depth at one moment.
// Instead of repeating 'exchange' and 'symbol' for every row, we group them here.
message OrderBookSnapshot {
  string id = 1;           // Unique snapshot ID (UUID or generated)
  string exchange = 2;     // Exchange name (e.g. "nobitex")
  string symbol = 3;       // Trading pair (e.g. "BTC/IRT")
  
  repeated OrderLevel bids = 4; // List of Buy orders
  repeated OrderLevel asks = 5; // List of Sell orders
  
  string last_update = 6;  // Exchange timestamp in RFC3339 format
}

